# roblox-to-godot-project

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  commands.lldb
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
godot/: .gitignore  extension_list.cfg  icon.png.import  icon.svg.import  node.gd  node.tscn  project.godot  roblox-to-godot-project.gdextension
roblox-to-godot-project-derive/: Cargo.toml  schtuff.rs
roblox-to-godot-project-derive/src/: lib.rs  lib.rs.bak  parse.rs
src/: lib.rs  test.lua
src/core/: assert_gdext_api.rs  fastflags.rs  inheritance.rs  instance_repl_table.rs  instance_tag_collection.rs  lua_macros.rs  mod.rs  pointers.rs  rw_lock.rs  scheduler.rs  security.rs  state.rs  vm.rs  watchdog.rs
src/core/alloc/: alloc_trait.rs  global.rs  mod.rs  paged_alloc.rs
src/core/rc/: inheriting_rc.rs  mod.rs  threaded_rc.rs
src/core/trc/: inheriting_rc.rs  mod.rs  threaded_rc.rs
src/godot_vm_bindings/: mod.rs  vm_node.rs
src/instance/: actor.rs  data_model.rs  instance.rs  mod.rs  model.rs  object.rs  pvinstance.rs  run_service.rs  script.rs  service_provider.rs  workspace.rs
src/userdata/: axes.rs  cframe.rs  events.rs  instance.rs  mod.rs  vectors.rs
src/userdata/enums/: axis.rs  mod.rs  model_level_of_detail.rs  model_streaming_mode.rs  normalid.rs  rotation_order.rs  run_context.rs
