[package]
name = "roblox-to-godot-project"
version = "0.0.1-indev"
edition = "2021"
authors = ["Radiant"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.2.1", features = ["register-docs"] }
mlua = { git = "https://github.com/RadiantUwU/mlua.git", branch = "edits", features = ["luau", "luau-jit", "macros", "async", "vendored"] }
rustversion = "1.0.19"
rustversion-detect = "0.1.3"
