[package]
name = "roblox-to-godot-project"
authors = ["Radiant"]
description = "Roblox To Godot Project, allowing you to run Roblox games inside Godot"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/roblox-to-godot-project/roblox-to-godot-project"
version = "0.1.0-indev"


[features]
deadlock_detection = ["parking_lot/deadlock_detection"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_reflect = "0.15.1"
godot = { version = "0.2.1", features = ["register-docs"] }
r2g_mlua = { version = "0.10.3", features = ["luau", "luau-jit", "macros", "async", "vendored"] }
parking_lot = { version = "0.12.3", features = [] }
rustversion = "1.0.19"
rustversion-detect = "0.1.3"

[workspace]

members = ["roblox-to-godot-project-derive"]
