[package]
name = "roblox-to-godot-project-derive"
authors = ["Radiant"]
description = "Derive macros for roblox-to-godot-project"
license = "Apache-2.0"
version = "0.1.0-indev"
edition = "2021"
repository = "https://github.com/roblox-to-godot-project/roblox-to-godot-project"

[lib]
proc-macro=true

[dependencies]
proc-macro2 = "1.0.93"
syn = { version = "2.0.96", features = ["full"] }
